fix: avoid page repositioning on overflow-y

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@ html {
     background-color: black;
     color: white;
     font-family: sans-serif;
+    overflow-y: scroll;
 }
 
 body {
